--- a/src/error_component/error.css
+++ b/src/error_component/error.css
@@ -13,33 +13,42 @@
 .modal__window {
 	max-width: 500px;
 	background-color: #fff;
-	border: 1px solid #fff;
+	border: 1px solid #b3b3b3;
 	font-size: 1rem;
 	box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+	margin-top: -15%;
 }
 
 .modal__titlebar {
-	height: 40px;
 	background-color: #333;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding: 5px;
+}
+
+@media screen and (min-width: 700px) {
+	.modal__titlebar {
+		height: 40px;
+	}
 }
 
 .modal__title {
-	margin-left: 15px;
+	margin-left: 5px;
 	font-weight: 500;
 	color: #eee;
 }
 
 .modal__close {
-	width: 40px;
-	height: 40px;
+	width: 18px;
+	height: 18px;
 	outline: none !important;
 	border: none;
 	background-color: transparent;
 	color: #eee;
 	cursor: pointer;
+	margin-top: -10px;
+	margin-right: 3px;
 }
 
 .modal__close svg {
@@ -51,7 +60,7 @@
 }
 
 .modal__content {
-	padding: 15px;
+	padding: 5px;
 	font-size: 1rem;
 	color: #333;
 	text-align: initial;
