--- a/src/weatherDetailsRender/weatherDetailsRender.css
+++ b/src/weatherDetailsRender/weatherDetailsRender.css
@@ -55,7 +55,7 @@
 }
 
 .weatherDetails__today {
-	font-weight: 400;
+	font-weight: 500 !important;
 }
 
 .weatherDetails__icon {
@@ -70,8 +70,9 @@
 	grid-template-columns: 1fr auto 1fr;
 	grid-gap: 10px;
 	align-items: center;
-	width: 70%;
+	width: 90%;
 	margin: auto;
+	font-size: 1.2;
 }
 
 .weatherDetails__others:before,
@@ -88,13 +89,13 @@
 	transition: border-color 0.2s;
 	width: 100%;
 	padding: 10px 20px;
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: rgba(255, 255, 255, 0.25);
 }
 
 .weatherDetails__info h4 {
 	font-size: 1.2rem;
 	text-transform: capitalize;
-	font-weight: 400;
+	font-weight: 500 !important;
 	color: #fff;
 	text-shadow: none;
 	margin-bottom: 0;
@@ -105,7 +106,7 @@
 	display: inline-block;
 	font-size: 1.2rem;
 	text-transform: none;
-	font-weight: 400;
+	font-weight: 500;
 	color: #fff;
 	background-color: transparent;
 	border-radius: 0;
